vlib/v/checker/tests/with_check_option/v_import_const.vv
import abc.def { const, global }
import xyz.qwe

fn abc() {
}
